--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         gapi.load('client:auth2', initClient);
 
         // Client ID from the Google Cloud Console
-        const CLIENT_ID = '183624870371-f62n21eo3qcau6jt107sk0d5d0pldac7.apps.googleusercontent.com'; // Replace with your actual client ID
+        const CLIENT_ID = ''; // Replace with your actual client ID
 
         // Initialize the API client with your key
         function initClient() {
